--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,9 @@
 ---
 spring:
   jpa:
-    show-sql: false
+    show-sql: true
   h2:
     console:
-      enabled: false
+      enabled: true
   datasource:
     url: jdbc:h2:mem:testdb
