--- a/currency-spring-cloud-config-client-testing.properties
+++ b/currency-spring-cloud-config-client-testing.properties
@@ -1,1 +1,1 @@
-message=Hello world - this message is from config server tesing enviroment
+message=Hello world - this message is from config server tesing enviroment changed
