--- a/application-testing.yml
+++ b/application-testing.yml
@@ -1,1 +1,1 @@
-message: Hello world - this message is from config server tesing enviroment changed
+message: Hello world - this message is from config server testing enviroment changed
