--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,1 +1,9 @@
 message: This is the file that contains the development properties
+spring:
+  jpa:
+    show-sql: false
+  h2:
+    console:
+      enabled: false
+  datasource:
+    url: jdbc:h2:mem:testdb
