--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,9 +1,9 @@
 message: This is the file that contains the development properties
 spring:
   jpa:
-    show-sql: false
+    show-sql: true
   h2:
     console:
-      enabled: false
+      enabled: true
   datasource:
     url: jdbc:h2:mem:testdb
