--- a/application-dev.yml
+++ b/application-dev.yml
@@ -7,3 +7,9 @@ spring:
       enabled: true
   datasource:
     url: jdbc:h2:mem:testdb
+ 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,refresh 
