--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,10 +1,10 @@
 message: This is the file that contains the development properties
 spring:
   jpa:
-    show-sql: true
+    show-sql: false
   h2:
     console:
-      enabled: true
+      enabled: false
   datasource:
     url: jdbc:h2:mem:testdb
  
