--- a/application-dev.yml
+++ b/application-dev.yml
@@ -8,3 +8,8 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
