--- a/application-dev.yml
+++ b/application-dev.yml
@@ -6,7 +6,7 @@ spring:
     console:
       enabled: false
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:testdb1
 
 management:
   endpoints:
