--- a/application-dev.yml
+++ b/application-dev.yml
@@ -6,10 +6,4 @@ spring:
     console:
       enabled: true
   datasource:
-    url: jdbc:h2:mem:testdb1
-
-management:
-  endpoints:
-    web:
-      exposure:
-        include: refresh
+    url: jdbc:h2:mem:testdb
